feat(not-found-path): functionality was added

--- a/src/app/public/pages/page-not-found/page-not-found.component.html
+++ b/src/app/public/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,4 @@
-<p>page-not-found works!</p>
+<h1>Page Not Found</h1>
+<p>The path <b>{{ invalidUrl }}</b> is not valid.</p>
+<h3>You will be redirected in {{ secondsToRedirect }} seconds</h3>
+<button (click)="goToHome()">Or click here to go Home</button>
