feat(i18n): added translations in not found page

--- a/src/app/public/pages/page-not-found/page-not-found.component.html
+++ b/src/app/public/pages/page-not-found/page-not-found.component.html
@@ -1,4 +1,4 @@
-<h1>Page Not Found</h1>
-<p>The path <b>{{ invalidUrl }}</b> is not valid.</p>
-<h3>You will be redirected in {{ secondsToRedirect }} seconds</h3>
-<button (click)="goToHome()">Or click here to go Home</button>
+<h1>{{'pageNotFound.title' | translate}}</h1>
+<p> {{'pageNotFound.message' | translate: {page: invalidUrl} }} <b>{{ invalidUrl }} </b></p>
+<h3>{{'pageNotFound.redirect' | translate}} {{ secondsToRedirect }} seconds</h3>
+<button (click)="goToHome()">{{"pageNotFound.button" | translate}}</button>
