--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <h1>PocketPartners</h1>
   <div class="mat-spacer"></div>
   <a mat-button *ngFor="let option of options"
-     [routerLink]="option.path">{{ option.title }}</a>
+    [routerLink]="option.path">{{ option.title }}</a>
+  <app-language-switcher />
 </mat-toolbar>
 <router-outlet></router-outlet>
