--- a/src/app/group/pages/page-create-group/page-create-group.component.html
+++ b/src/app/group/pages/page-create-group/page-create-group.component.html
@@ -1,1 +1,10 @@
-<p>page-create-group works!</p>
+<section class="create-group">
+    <div class="container">
+        <div class="create-group__content">
+            <h1 class="title">{{'group.create-group.title' | translate}}</h1>
+        </div>
+    </div>
+    <div class="form">
+        <app-form-create-group />
+    </div>
+</section>
