--- a/src/app/public/components/language-switcher/language-switcher.component.html
+++ b/src/app/public/components/language-switcher/language-switcher.component.html
@@ -1,4 +1,7 @@
-<mat-button-toggle-group [value]="currentLang" appearance="standard" aria-label="Preferred Language" name="language">
-    <mat-button-toggle (click)="useLanguage(language)" *ngFor="let language of languages" [aria-label]="language"
-        [value]="language">{{ language.toUpperCase() }}</mat-button-toggle>
-</mat-button-toggle-group>
+<div class="language-switcher">
+  <mat-button-toggle-group [value]="currentLang" appearance="standard" aria-label="Preferred Language" name="language">
+    <mat-button-toggle *ngFor="let language of languages" [value]="language" (click)="useLanguage(language)">
+      {{ language.toUpperCase() }}
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+</div>
