--- a/src/app/group/components/form-create-group/form-create-group.component.html
+++ b/src/app/group/components/form-create-group/form-create-group.component.html
@@ -9,25 +9,25 @@
             </ng-template>
             <mat-form-field>
                 <mat-label>Nombre del Grupo</mat-label>
-                <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+                <input matInput formControlName="firstCtrl" required>
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Imagen del grupo</mat-label>
-                <input matInput formControlName="firstCtrl" required>
+                <input matInput formControlName="secondCtrl" required>
             </mat-form-field>
             <div>
                 <button mat-button matStepperNext>Next</button>
             </div>
         </form>
     </mat-step>
-    <mat-step [stepControl]="secondFormGroup" label="Fill out your address">
+    <mat-step [stepControl]="secondFormGroup">
         <form [formGroup]="secondFormGroup">
             <ng-template matStepLabel>
                 Integrantes del Grupo
             </ng-template>
             <mat-form-field>
                 <mat-label>Integrantes</mat-label>
-                <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
+                <input matInput formControlName="firstCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
             </mat-form-field>
             <div>
                 <button mat-button matStepperPrevious>Back</button>
@@ -35,14 +35,14 @@
             </div>
         </form>
     </mat-step>
-    <mat-step>
-        <form [formGroup]="secondFormGroup">
+    <mat-step [stepControl]="thirdFormGroup">
+        <form [formGroup]="thirdFormGroup">
             <ng-template matStepLabel>
                 Moneda que usara el grupo
             </ng-template>
             <mat-form-field>
                 <mat-label>Moneda</mat-label>
-                <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
+                <input matInput formControlName="firstCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
             </mat-form-field>
             <div>
                 <button mat-button matStepperNext>Next</button>
