--- a/src/app/group/pages/page-create-group/page-create-group.component.html
+++ b/src/app/group/pages/page-create-group/page-create-group.component.html
@@ -1,10 +1,10 @@
 <section class="create-group">
     <div class="container">
         <div class="create-group__content">
-            <h1 class="title">{{'group.create-group.title' | translate}}</h1>
+            <h1 class="title">{{ 'group.create-group.title' | translate }}</h1>
         </div>
     </div>
     <div class="form">
-        <app-form-create-group />
+        <app-form-create-group (createGroup)="createNewGroup($event)"></app-form-create-group>  
     </div>
 </section>
