--- a/src/app/expenses/pages/page-expenses/page-expenses.component.html
+++ b/src/app/expenses/pages/page-expenses/page-expenses.component.html
@@ -1,1 +1,5 @@
 <p>page-expenses works!</p>
+
+<div class="content">
+<app-expense-card *ngFor="let expense of expenses" [expense]="expense"></app-expense-card>
+</div>
