--- a/src/app/expenses/pages/page-expenses/page-expenses.component.css
+++ b/src/app/expenses/pages/page-expenses/page-expenses.component.css
@@ -2,3 +2,11 @@
     justify-content: center;
     display: flex;
 }
+
+.add-button {
+    margin-top: 20px;
+    display: flex;
+    z-index: 15;
+    align-items:end;
+    justify-content: end;
+}
