--- a/src/app/pockets/pages/home/home.component.css
+++ b/src/app/pockets/pages/home/home.component.css
@@ -59,3 +59,17 @@
   font-size: 18px;
   margin-bottom: 5px;
 }
+
+
+.expenses-card {
+  width: 360px;
+  margin: 10px;
+  height: 460px;
+}
+
+.movements-image {
+  height: 150px;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+
+}
