--- a/src/app/pockets/pages/home/home.component.html
+++ b/src/app/pockets/pages/home/home.component.html
@@ -2,11 +2,11 @@
   <mat-card class="welcome-card">
     <mat-card-header>
       <div mat-card-avatar class="welcome-image"></div>
-      <mat-card-title>Bienvenido</mat-card-title>
+      <mat-card-title>Welcome Back</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>¡Hola! Esperamos que tengas un gran día.</p>
-      <p>La última vez que iniciaste sesión fue el 27/04/2024</p>
+      <p>¡Hi! We hope you have a nice day.</p>
+      <p>The last time you login was on 27/04/2024</p>
     </mat-card-content>
   </mat-card>
 
@@ -31,6 +31,21 @@
     </mat-card>
   </div>
 </div>
+<div class="container">
+  <mat-card class="expenses-card">
+    <mat-card-header>
+      <mat-card-title>Recent Movements</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div mat-card-image class="movements-image">
+        <img src="https://i.ibb.co/JRpTc5g/movements.png" alt="Money Movements">
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <app-chart></app-chart>
+</div>
 
-<app-chart></app-chart>
+
+
+
 
