Fix: added color to button

--- a/src/app/payments/outgoing/pages/outgoing.component.html
+++ b/src/app/payments/outgoing/pages/outgoing.component.html
@@ -34,7 +34,7 @@
   <mat-card-header>
     <mat-card-title-group>
       <mat-card-title>Pagos Faltantes</mat-card-title>
-      <button mat-raised-button>Hacer Pago</button>
+      <button mat-raised-button class="btnPago">Hacer Pago</button>
     </mat-card-title-group>
   </mat-card-header>
 
