--- a/src/app/payments/outgoing/pages/outgoing.component.css
+++ b/src/app/payments/outgoing/pages/outgoing.component.css
@@ -14,6 +14,11 @@
   margin: 1.5rem;
 }
 
+.btnPago{
+  color: white;
+  background-color: rgb(170, 103, 242);
+}
+
 .container {
   display: flex;
   justify-content: space-between;
