chore(login): added component login.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<mat-toolbar>
-  <h1>PocketPartners</h1>
-  <div class="mat-spacer"></div>
-  <a mat-button *ngFor="let option of options"
-     [routerLink]="option.path">{{ option.title }}</a>
-</mat-toolbar>
+<app-login></app-login>
 <router-outlet></router-outlet>
