feat(component login): added images refered to login.

--- a/src/app/authorization/components/login/login.component.html
+++ b/src/app/authorization/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="image-container">
-    <img src="../../../assets/loginimageleft.png" alt="Imagen de fondo">
+    <img src="app/authorization/components/images/loginimageleft.png" alt="Imagen de fondo">
   </div>
   <div class="form-container poppins-font">
     <div class="welcome-text poppins-font">¡Bienvenido de vuelta!</div>
@@ -28,9 +28,9 @@
     </div>
     <br>
     <div class="social-icons">
-      <img src="../../../../assets/imgGoogleAccess.png" alt="Google">
-      <img src="../../../../assets/imgAppleAccess.png" alt="Apple">
-      <img src="../../../../assets/imgFacebookAccess.png" alt="Facebook">
+      <img src="app/authorization/components/images/imgGoogleAccess.png" alt="Google">
+      <img src="app/authorization/components/images/imgAppleAccess.png" alt="Apple">
+      <img src="app/authorization/components/images/imgFacebookAccess.png" alt="Facebook">
     </div>
     <br>
     <div class="register-text poppins-font" >Aún no tienes una cuenta? <span>Regístrate</span></div>
