feat: Update group page layout and styles

--- a/src/app/group/pages/page-group/page-group.component.html
+++ b/src/app/group/pages/page-group/page-group.component.html
@@ -1,7 +1,15 @@
-
 <h1>Todos los grupos</h1>
-<div>
-    <p *ngFor="let group of groups">{{ group.name }}</p>
-</div>
+<div class="container">
 
-<a [routerLink]="['/create-group']">Crear grupo</a>
+  <mat-card *ngFor="let group of groups" class="group-card">
+    {{ group.id }}
+    <h2>
+      {{ group.name }}
+    </h2>
+    <p>
+      Creation date:
+      {{ group.creationDate | date: 'dd/MM/yyyy'}}
+    </p>
+  </mat-card>
+  <a [routerLink]="['/create-group']">Crear grupo</a>
+</div>
