--- a/src/app/contacts/pages/contact/contact.component.html
+++ b/src/app/contacts/pages/contact/contact.component.html
@@ -20,6 +20,9 @@
 </div>
 <mat-dialog-actions>
   <div class="button-container">
-    <button mat-raised-button color="accent" (click)="openPopup()">Add Contact +</button>
+    <button mat-raised-button color="accent" (click)="openPopup()">
+      <mat-icon>add</mat-icon>
+      Add Contact
+    </button>
   </div>
 </mat-dialog-actions>
