--- a/src/app/expenses/components/expense-card/expense-card.component.css
+++ b/src/app/expenses/components/expense-card/expense-card.component.css
@@ -1,7 +1,31 @@
 .expense-card {
-    margin-bottom: 20px;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
-    overflow: hidden;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-right: 20px;
+  color: white;
+}
+
+.expense-header {
+  background-color: #c682ff;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.expense-content {
+  padding: 16px;
+  color: black;
+}
+
+.expense-actions button {
+  background-color: #3498db;
+  color: white;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  padding: 6px;
+}
+
+.expense-actions button:hover {
+  background-color: #2980b9;
 }
