--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
-<mat-toolbar>
-  <h1>PocketPartners</h1>
-  <div class="mat-spacer"></div>
-  <a mat-button *ngFor="let option of options"
-    [routerLink]="option.path">{{ option.title }}</a>
-  <span>
-        <app-language-switcher/>
-  </span>
-</mat-toolbar>
-<router-outlet></router-outlet>
+<app-header></app-header>
+
+
