--- a/src/app/expenses/pages/page-expenses/page-expenses.component.css
+++ b/src/app/expenses/pages/page-expenses/page-expenses.component.css
@@ -1,6 +1,7 @@
 .content {
     justify-content: center;
     display: flex;
+    margin-top: 40px;
 }
 
 .add-button {
@@ -9,4 +10,15 @@
     z-index: 15;
     align-items:end;
     justify-content: end;
+    margin-right: 20px;
+}
+
+.add-button button {
+  background-color: rgba(198, 130, 255, 0.89);
+  color: white;
+}
+
+.add-button button:hover {
+  background-color: #aa67f2;
+  transition: 0.5s;
 }
