--- a/src/app/group/components/form-create-group/form-create-group.component.html
+++ b/src/app/group/components/form-create-group/form-create-group.component.html
@@ -1,18 +1,15 @@
-<button mat-raised-button (click)="isLinear = !isLinear" id="toggle-linear">
-    {{!isLinear ? 'Enable linear mode' : 'Disable linear mode'}}
-</button>
-<mat-stepper [linear]="isLinear" #stepper>
+<mat-stepper [linear]="!isLinear" #stepper>
     <mat-step [stepControl]="firstFormGroup">
         <form [formGroup]="firstFormGroup">
             <ng-template matStepLabel>
-                Información del Grupo
+                Group Information
             </ng-template>
             <mat-form-field>
-                <mat-label>Nombre del Grupo</mat-label>
+                <mat-label>Group Name</mat-label>
                 <input matInput formControlName="firstCtrl" required>
             </mat-form-field>
             <mat-form-field>
-                <mat-label>Imagen del grupo</mat-label>
+                <mat-label>Group Image(link)</mat-label>
                 <input matInput formControlName="secondCtrl" required>
             </mat-form-field>
             <div>
@@ -23,10 +20,10 @@
     <mat-step [stepControl]="secondFormGroup">
         <form [formGroup]="secondFormGroup">
             <ng-template matStepLabel>
-                Integrantes del Grupo
+                Group Members
             </ng-template>
             <mat-form-field>
-                <mat-label>Integrantes</mat-label>
+                <mat-label>Members</mat-label>
                 <input matInput formControlName="firstCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
             </mat-form-field>
             <div>
@@ -38,10 +35,10 @@
     <mat-step [stepControl]="thirdFormGroup">
         <form [formGroup]="thirdFormGroup">
             <ng-template matStepLabel>
-                Moneda que usara el grupo
+                Group Currency
             </ng-template>
             <mat-form-field>
-                <mat-label>Moneda</mat-label>
+                <mat-label>Currency</mat-label>
                 <input matInput formControlName="firstCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
             </mat-form-field>
             <div>
@@ -52,9 +49,9 @@
     <mat-step>
         <form>
             <ng-template matStepLabel>
-                Confirmación
+                Confirmation
             </ng-template>
-            <p>Gracias por crear el grupo</p>
+            <p>New Group Created</p>
             <div>
                 <button mat-button matPrimary (click)="createNewGroup()">Done</button>
             </div>
