--- a/src/app/group/pages/page-group/page-group.component.html
+++ b/src/app/group/pages/page-group/page-group.component.html
@@ -1,7 +1,7 @@
-
-<h1>Todos los grupos</h1>
-<div>
-    <p *ngFor="let group of groups">{{ group.name }}</p>
+<h1 class="title">Todos los grupos</h1>
+<div class="groups-container">
+  <div class="group-item" *ngFor="let group of groups">{{ group.name }}</div>
 </div>
-
-<a [routerLink]="['/create-group']">Crear grupo</a>
+<div class="create-group-container">
+  <a [routerLink]="['/create-group']" class="create-group-button">Crear grupo</a>
+</div>
