--- a/src/app/pockets/pages/home/home.component.css
+++ b/src/app/pockets/pages/home/home.component.css
@@ -1,5 +1,10 @@
 .welcome-card {
   width: 400px;
+  justify-content: left;
+}
+
+.else{
+  margin-top: 40px;
 }
 
 .welcome-image {
@@ -9,6 +14,7 @@
   height: 80px;
   border-radius: 50%;
   margin-right: 20px;
+  margin-top: 20px
 }
 
 .currency-image{
@@ -40,15 +46,16 @@
 }
 
 .balance-card {
-  width: 350px;
+  width: 510px;
   height: 150px;
   background-color: rgb(170, 103, 242);
+  color: white;
 }
 
 .currency-card {
   width: 35%;
   height: 150px;
-  background-color: orange;
+  background-color: #8288ff;
   justify-items: center;
   justify-content: center;
 }
@@ -71,5 +78,4 @@
   height: 150px;
   aspect-ratio: 16/9;
   object-fit: cover;
-
 }
