--- a/src/app/pockets/pages/home/home.component.html
+++ b/src/app/pockets/pages/home/home.component.html
@@ -2,7 +2,8 @@
   <mat-card class="welcome-card">
     <mat-card-header>
       <div mat-card-avatar class="welcome-image"></div>
-      <mat-card-title>Welcome Back</mat-card-title>
+      <mat-card-title class="else">Welcome Back</mat-card-title>
+      <mat-card-subtitle>Jon Snow</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <p>¡Hi! We hope you have a nice day.</p>
@@ -13,9 +14,9 @@
   <div class="cards-container">
     <mat-card class="balance-card">
       <mat-card-header>
-        <mat-card-title style="color: white; font-family: 'Arial', sans-serif; font-size: 18px; margin-bottom: 5px;">Balance</mat-card-title>
+        <mat-card-title class="balance-card-title">Balance</mat-card-title>
       </mat-card-header>
-      <mat-card-content style="color: white; font-family: 'Arial', sans-serif; font-size: 18px; margin-bottom: 5px;">
+      <mat-card-content>
         <h4>Amount</h4>
         <h2>4000</h2>
       </mat-card-content>
@@ -23,21 +24,22 @@
 
     <mat-card class="currency-card">
       <mat-card-header>
-        <mat-card-title style="color: white; font-family: 'Arial', sans-serif; font-size: 18px; margin-bottom: 5px;">Currency</mat-card-title>
+        <mat-card-title class="currency-card-title">Currency</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <div mat-card-avatar class="currency-image"></div>
+        <div class="currency-image"></div>
       </mat-card-content>
     </mat-card>
   </div>
 </div>
+
 <div class="container">
   <mat-card class="expenses-card">
     <mat-card-header>
       <mat-card-title>Recent Movements</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <div mat-card-image class="movements-image">
+      <div class="movements-image">
         <img src="https://i.ibb.co/JRpTc5g/movements.png" alt="Money Movements">
       </div>
     </mat-card-content>
