--- a/src/app/group/pages/page-group/page-group.component.html
+++ b/src/app/group/pages/page-group/page-group.component.html
@@ -1,7 +1,13 @@
 <h1 class="title">Todos los grupos</h1>
 <div class="groups-container">
-  <div class="group-item" *ngFor="let group of groups">{{ group.name }}</div>
+  <div class="group-item" *ngFor="let group of groups">
+    <h2>{{ group.name }}</h2>
+    <p> {{ group.creationDate | date: 'dd/MM/yyyy'}}</p>
+  </div>
 </div>
 <div class="create-group-container">
   <a [routerLink]="['/create-group']" class="create-group-button">Crear grupo</a>
 </div>
+
+
+
