feat: Add group detail page and redirect to group list after creating a new one

--- a/src/app/group/pages/page-group/page-group.component.html
+++ b/src/app/group/pages/page-group/page-group.component.html
@@ -3,6 +3,9 @@
   <div class="group-item" *ngFor="let group of groups">
     <h2>{{ group.name }}</h2>
     <p> {{ group.creationDate | date: 'dd/MM/yyyy'}}</p>
+    <div class="group-item" (click)="openGroup(group.id)">
+      <mat-icon>open_in_new</mat-icon> Ver más detalles
+    </div>
   </div>
 </div>
 <div class="create-group-container">
