fix(sidebar): added logo

--- a/src/app/expenses/components/form-expense/form-expense.component.html
+++ b/src/app/expenses/components/form-expense/form-expense.component.html
@@ -2,10 +2,10 @@
 <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
         <ng-template matStepLabel>
-            Información del Gasto
+            New Expense
         </ng-template>
         <mat-form-field>
-            <mat-label>Dale un nombre</mat-label>
+            <mat-label>Give it a name</mat-label>
             <input matInput formControlName="firstCtrl" required>
         </mat-form-field>
         <div>
@@ -16,10 +16,10 @@
 <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
         <ng-template matStepLabel>
-            Cuando fue tu gasto
+            When?
         </ng-template>
         <mat-form-field>
-            <mat-label>Ingresa la fecha</mat-label>
+            <mat-label>Date of the Expense</mat-label>
             <input type="date" matInput formControlName="firstCtrl" required>
         </mat-form-field>
         <div>
@@ -31,10 +31,10 @@
 <mat-step [stepControl]="thirdFormGroup">
     <form [formGroup]="thirdFormGroup">
         <ng-template matStepLabel>
-            Cuando gasto
+            How much?
         </ng-template>
         <mat-form-field>
-            <mat-label>Ingresa la cantidad</mat-label>
+            <mat-label>Set the amount</mat-label>
             <input type="number" matInput formControlName="firstCtrl" required>
         </mat-form-field>
         <div>
@@ -46,10 +46,10 @@
 <mat-step [stepControl]="fourthFormGroup">
     <form [formGroup]="fourthFormGroup">
         <ng-template matStepLabel>
-            Grupo para agregar gasto
+            Which group?
         </ng-template>
         <mat-form-field>
-            <mat-label>Selecciona un grupo</mat-label>
+            <mat-label>Pick a group</mat-label>
             <mat-select formControlName="firstCtrl" required>
                 <mat-option *ngFor="let group of user.groups" [value]="group.id">
                     {{ group.name }}
@@ -64,18 +64,18 @@
 </mat-step>
 <mat-step>
     <ng-template matStepLabel>
-        Resumen
+        Summary
     </ng-template>
     <div>
-        <h1>Resumen</h1>
-        <p>Nombre: {{ firstFormGroup.value.firstCtrl }}</p>
-        <p>Fecha: {{ secondFormGroup.value.firstCtrl }}</p>
-        <p>Gasto: {{ thirdFormGroup.value.firstCtrl }}</p>
-        <p>Grupo: {{ fourthFormGroup.value.firstCtrl }}</p>
+        <h1>Summary</h1>
+        <p>Name: {{ firstFormGroup.value.firstCtrl }}</p>
+        <p>Date: {{ secondFormGroup.value.firstCtrl }}</p>
+        <p>Expense: {{ thirdFormGroup.value.firstCtrl }}</p>
+        <p>Group: {{ fourthFormGroup.value.firstCtrl }}</p>
     </div>
     <div>
         <button mat-button matStepperPrevious>Back</button>
         <button mat-button (click)="onSubmit()">Submit</button>
     </div>
 </mat-step>
-</mat-stepper>  
+</mat-stepper>
