--- a/src/app/expenses/pages/add-expense/add-expense.component.css
+++ b/src/app/expenses/pages/add-expense/add-expense.component.css
@@ -6,3 +6,9 @@
     border-radius: 10px;
     width: fit-content;
 }
+
+.new-expense{
+  margin-top: 15px;
+  padding: 40px;
+  margin-left: 50px;
+}
