--- a/src/app/expenses/pages/add-expense/add-expense.component.html
+++ b/src/app/expenses/pages/add-expense/add-expense.component.html
@@ -1,4 +1,7 @@
-<h1 class="title">
-    Agregar nuevo Gasto
-</h1>
-<app-form-expense (onAddExpense)="onSubmit($event)" [user]="user" />
+<div class="new-expense">
+  <h1 class="title">
+    Add New Expense
+  </h1>
+  <app-form-expense (onAddExpense)="onSubmit($event)" [user]="user" />
+</div>
+
