--- a/src/app/public/components/header/header.component.html
+++ b/src/app/public/components/header/header.component.html
@@ -4,6 +4,7 @@
   </button>
   <span class="spacer"></span>
   <label>PocketPartners</label>
+  <img src="assets/images/logo.png" alt="logo" style="height: 50px; margin-left: 5px">
 </mat-toolbar>
 <mat-drawer-container autosize>
   <mat-drawer #drawer opened="true" mode="side" position="start">
