--- a/src/app/expenses/pages/page-expenses/page-expenses.component.css
+++ b/src/app/expenses/pages/page-expenses/page-expenses.component.css
@@ -1,16 +1,24 @@
 .content {
-    justify-content: center;
-    display: flex;
-    margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  justify-content: center;
+  margin-top: 40px;
+  margin-left: 40px;
+}
+
+.expense-card {
+  max-width: 300px;
+  width: 100%;
 }
 
 .add-button {
-    margin-top: 20px;
-    display: flex;
-    z-index: 15;
-    align-items:end;
-    justify-content: end;
-    margin-right: 20px;
+  margin-top: 20px;
+  display: flex;
+  z-index: 10;
+  align-items: end;
+  justify-content: end;
+  margin-right: 20px;
 }
 
 .add-button button {
