--- a/src/app/payments/outgoing/pages/outgoing.component.css
+++ b/src/app/payments/outgoing/pages/outgoing.component.css
@@ -1,22 +1,40 @@
-.cards{
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+.title-container {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.title-container h1 {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #ff8c00;
+  border-radius: 20px;
+  font-family: 'Roboto', sans-serif;
+  color: #fff;
+  font-size: 24px;
+}
+
+.cards {
   display: flex;
   justify-content: space-between;
-  margin: 1.5rem;
-
+  margin: 0 1.5rem 40px;
 }
 
-.card{
-  width: calc((100% - 2 * 1em) / 2);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.75);
+.card {
+  flex: 1;
+  margin: 0 1rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
 }
 
-.group-card{
-  margin: 1.5rem;
+.group-container {
+  padding: 1rem;
 }
 
-.btnPago{
-  color: white;
-  background-color: rgb(170, 103, 242);
+.group-card {
+  margin-bottom: 1rem;
 }
 
 .container {
@@ -26,14 +44,39 @@
 }
 
 .box {
-  width: calc((100% - 2 * 1em) / 2);
-  height: 100%;
+  flex: 1;
   text-align: center;
 }
 
+.box h3, .box h4 {
+  font-family: 'Roboto', sans-serif;
+  color: #333;
+}
+
+.box p {
+  font-family: 'Roboto', sans-serif;
+  color: #555;
+  margin: 0.5rem 0;
+}
+
+.btnPago {
+  color: white;
+  background-color: rgb(170, 103, 242);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-left: 153px;
+}
+
+.btnPago:hover {
+  background-color: rgb(150, 83, 222);
+}
+
 @media only screen and (max-width: 600px) {
-  .container {
-    display: unset;
-    justify-content: unset;
+  .cards {
+    flex-direction: column;
   }
 }
