--- a/src/app/group/pages/page-group-details/page-group-details.component.css
+++ b/src/app/group/pages/page-group-details/page-group-details.component.css
@@ -1,3 +1,17 @@
+.container {
+  display: flex;
+}
+
+.left-card {
+  flex: 1;
+}
+
+.right-cards {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+}
+
 mat-card {
   width: 500px;
   margin: 20px;
@@ -43,6 +57,15 @@ mat-card-content p {
 mat-card-title-group {
   margin-bottom: 10px;
 }
+
+.checked span {
+  text-decoration: line-through;
+}
+
+.amount {
+  margin-left: 10px;
+}
+
 
 @media only screen and (max-width: 500px) {
   mat-card {
