--- a/src/app/public/components/header/header.component.html
+++ b/src/app/public/components/header/header.component.html
@@ -30,8 +30,8 @@
       <mat-list-item>
         <button routerLink="outgoing" mat-button><mat-icon>money</mat-icon>Outgoing Payments</button>
       </mat-list-item>
-      <mat-list-item>
-        <button routerLink="" mat-button><mat-icon>logout</mat-icon>Logout</button>
+      <mat-list-item (click)="logout()">
+        <button mat-button><mat-icon>logout</mat-icon>Logout</button>
       </mat-list-item>
     </mat-nav-list>
   </mat-drawer>
