update(users): backend implementation

--- a/src/app/public/components/header/header.component.html
+++ b/src/app/public/components/header/header.component.html
@@ -13,7 +13,7 @@
         <button routerLink="home" mat-button><mat-icon>home</mat-icon> Home</button>
       </mat-list-item>
       <mat-list-item>
-        <button routerLink="contacts" mat-button><mat-icon>person</mat-icon> Contacts</button>
+        <button routerLink="users" mat-button><mat-icon>person</mat-icon> Users</button>
       </mat-list-item>
       <mat-list-item>
         <button routerLink="groups" mat-button><mat-icon>people</mat-icon> Groups</button>
