--- a/src/app/contacts/pages/contact/contact.component.html
+++ b/src/app/contacts/pages/contact/contact.component.html
@@ -2,7 +2,7 @@
   <mat-card *ngFor="let contact of contacts" class="contact-card">
     <mat-card-header>
       <mat-card-title-group>
-        <mat-card-title>{{ contact.name }}</mat-card-title>
+        <mat-card-title>{{ contact.fullName }}</mat-card-title>
       </mat-card-title-group>
       <img class="contact-image" [src]="contact.photo" alt="Contact Photo">
     </mat-card-header>
@@ -12,17 +12,9 @@
           <p style="display: inline-block;">Email:</p>
           <p style="display: inline-block; margin-left: 5px;">{{ contact.email }}</p>
           <p style="display: inline-block;">Phone:</p>
-          <p style="display: inline-block; margin-left: 5px;">{{ contact.phone }}</p>
+          <p style="display: inline-block; margin-left: 5px;">{{ contact.phoneNumber }}</p>
         </div>
       </div>
     </mat-card-content>
   </mat-card>
 </div>
-<mat-dialog-actions>
-  <div class="button-container">
-    <button mat-raised-button color="accent" (click)="openPopup()">
-      <mat-icon>add</mat-icon>
-      Add Contact
-    </button>
-  </div>
-</mat-dialog-actions>
