--- a/src/app/pockets/components/chart/chart.component.html
+++ b/src/app/pockets/components/chart/chart.component.html
@@ -3,8 +3,8 @@
     <mat-card-header>
       <mat-card-title>Line Chart of Expenses</mat-card-title>
     </mat-card-header>
-    <mat-card-content style="width: 600px">
-      <canvas id="myChart"></canvas>
+    <mat-card-content>
+      <canvas id="myChart" width="600" height="400"></canvas>
     </mat-card-content>
   </mat-card>
 </div>
