--- a/src/app/pockets/pages/home/home.component.css
+++ b/src/app/pockets/pages/home/home.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .welcome-card {
   width: 450px;
   justify-content: left;
@@ -29,10 +31,17 @@
   padding: 20px;
 }
 
+.container1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+}
+
 .cards-container {
    display: flex;
    align-items: center;
- }
+}
 
 .currency-card {
   margin-left: 10px;
@@ -57,15 +66,48 @@
   margin-bottom: 5px;
 }
 
-
-.expenses-card {
-  width: 360px;
-  margin: 10px;
-  height: 460px;
-}
-
 .movements-image {
   height: 150px;
   aspect-ratio: 16/9;
   object-fit: cover;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.app-chart {
+  flex: 1;
+}
+
+
+.expenses-card {
+  width: 45%;
+  margin-right: 20px;
+  background-color: #f0f5ff;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.expense-card {
+  background-color: #ffffff;
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 15px;
+  transition: background-color 0.3s ease;
+}
+
+.expense-card:hover {
+  background-color: #d9e8ff;
+}
+
+.title {
+  text-align: center;
+  color: #5a5a89;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
 }
