--- a/src/app/expenses/components/expense-card/expense-card.component.html
+++ b/src/app/expenses/components/expense-card/expense-card.component.html
@@ -1,10 +1,11 @@
 <mat-card class="expense-card">
   <mat-card-header class="expense-header">
     <mat-card-title>Expense: {{expense.name}}</mat-card-title>
+    <mat-card-subtitle>Created: {{expense.created_at | date:'medium'}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content class="expense-content">
     <p>Amount: {{expense.amount}}</p>
-    <p>Group: {{expense.group.name}}</p>
+    <p>Who owes you?: {{user?.name}}</p>
   </mat-card-content>
   <mat-card-actions class="expense-actions">
     <button mat-icon-button>
