--- a/src/app/pockets/components/chart/chart.component.html
+++ b/src/app/pockets/components/chart/chart.component.html
@@ -1,7 +1,7 @@
 <div class="example-card">
   <mat-card>
     <mat-card-header>
-      <mat-card-title>Line Chart of Expenses</mat-card-title>
+      <mat-card-title>Line Chart of My Expenses</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <canvas id="myChart" width="600" height="400"></canvas>
