feat: Update registration page to enable user registration

--- a/src/app/authorization/components/login/login.component.html
+++ b/src/app/authorization/components/login/login.component.html
@@ -34,6 +34,6 @@
       <img src="assets/images/imgFacebookAccess.png" alt="Facebook">
     </div>
 
-    <div class="register-text">Aún no tienes una cuenta? <span>Regístrate</span></div>
+    <div class="register-text">Aún no tienes una cuenta? <span (click)="wantToRegister()">Regístrate</span></div>
   </form>
 </div>
