--- a/src/app/payments/outgoing/pages/outgoing.component.html
+++ b/src/app/payments/outgoing/pages/outgoing.component.html
@@ -12,18 +12,30 @@
       <div class="group-container">
         <mat-card *ngFor="let group of groups" class="group-card">
           <mat-card-header>
-            <mat-card-title>{{ group.name }}</mat-card-title>
+            <mat-card-title-group>
+              <mat-card-title>{{ group.name }}</mat-card-title>
+            </mat-card-title-group>
           </mat-card-header>
 
           <mat-card-content>
             <div class="container">
               <div class="box name">
                 <h3><b>Members</b></h3>
-                <p *ngFor="let member of group.members">{{ member.name }}</p>
+                <div *ngFor="let payment of groupPayments[group.id]">
+                  {{ users[payment.userId]?.fullName || payment.userId }}
+                </div>
+              </div>
+              <div class="box date">
+                <h4><b>Description</b></h4>
+                <div *ngFor="let payment of groupPayments[group.id]">
+                  {{ payment.description }} <!-- Assuming description contains date -->
+                </div>
               </div>
               <div class="box amount">
                 <h4><b>Amount</b></h4>
-                <p *ngFor="let payment of group.paymentHistory">{{ payment.amount }} {{group.currency}}</p>
+                <div *ngFor="let payment of groupPayments[group.id]">
+                  {{ payment.amount | currency }}
+                </div>
               </div>
             </div>
           </mat-card-content>
@@ -42,18 +54,30 @@
       <div class="group-container">
         <mat-card *ngFor="let group of groups" class="group-card">
           <mat-card-header>
-            <mat-card-title>{{ group.name }}</mat-card-title>
+            <mat-card-title-group>
+              <mat-card-title>{{ group.name }}</mat-card-title>
+            </mat-card-title-group>
           </mat-card-header>
 
           <mat-card-content>
             <div class="container">
               <div class="box name">
                 <h3><b>Members</b></h3>
-                <p *ngFor="let member of group.members">{{ member.name }}</p>
+                <div *ngFor="let payment of groupPayments[group.id]">
+                  {{ users[payment.userId]?.fullName || payment.userId }}
+                </div>
+              </div>
+              <div class="box date">
+                <h4><b>Description</b></h4>
+                <div *ngFor="let payment of groupPayments[group.id]">
+                  {{ payment.description }} <!-- Assuming description contains date -->
+                </div>
               </div>
               <div class="box amount">
                 <h4><b>Amount</b></h4>
-                <p *ngFor="let payment of group.paymentHistory">{{ payment.amount }} {{group.currency}}</p>
+                <div *ngFor="let payment of groupPayments[group.id]">
+                  {{ payment.amount | currency }}
+                </div>
               </div>
             </div>
           </mat-card-content>
