--- a/src/app/payments/incoming/pages/incoming.component.html
+++ b/src/app/payments/incoming/pages/incoming.component.html
@@ -14,13 +14,13 @@
       <div class="box name">
         <h3><b>Members</b></h3>
         <div *ngFor="let payment of groupPayments[group.id]">
-          {{ users[payment.userId]?.fullName || payment.userId }}
+          {{ users[payment.userId].fullName || payment.userId }}
         </div>
       </div>
       <div class="box date">
         <h4><b>Description</b></h4>
         <div *ngFor="let payment of groupPayments[group.id]">
-          {{ payment.description }} <!-- Assuming description contains date -->
+          {{ payment.description }}
         </div>
       </div>
       <div class="box amount">
