--- a/src/app/payments/outgoing/pages/outgoing.component.html
+++ b/src/app/payments/outgoing/pages/outgoing.component.html
@@ -47,7 +47,7 @@
   <mat-card class="missing card">
     <mat-card-header>
       <mat-card-title>Payments to Do</mat-card-title>
-      <button mat-raised-button class="btnPago">Make Payment</button>
+      <button [routerLink]="'add-payment'" mat-raised-button class="btnPago">Make Payment</button>
     </mat-card-header>
 
     <mat-card-content>
