--- a/src/app/payments/outgoing/pages/outgoing.component.html
+++ b/src/app/payments/outgoing/pages/outgoing.component.html
@@ -64,7 +64,7 @@
               <div class="box name">
                 <h3><b>Members</b></h3>
                 <div *ngFor="let payment of groupPayments[group.id]">
-                  {{ users[payment.userId]?.fullName || payment.userId }}
+                  {{ users[payment.userId].fullName || payment.userId }}
                 </div>
               </div>
               <div class="box date">
